style.css
body {
  margin: 0;
  padding: 0;
  background-color: rgb(0, 75, 0);
  /* background-color: #222; */
  color: white;
}

p {
  margin: 0;
}

/*table specifics*/
.play-area {
  height: 100vh;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: 1fr 2fr;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.play-area>div{
  display: flex;
}
.tableau{
  flex-direction: column;
}

.card {
  /*250x389*/
  width: calc(95vw/7);
  height: auto;
  position: absolute;
}.card:hover{
  filter: drop-shadow(0 0 5px white);
  /* transition: 100ms; */
  margin-top: -2px;
}

.separator {
  display: flex;
  flex: 1 1 0;
  justify-content: center;
}

.hidden {
  display: none;
}

/*for testing*/

**{
  box-shadow: inset 0 0 0 1px gray;
}

